<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_baseline_shopping_basket_24"
            android:title="@string/chart" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_baseline_monetization_on_24"
            android:title="@string/budget" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_arrow_back_24"
            android:title="@string/logout" />
    </group>
</menu>